# opensomeip

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.test  README.md  TRACEABILITY_MATRIX.md  VERSION.md  test_message_results.xml  test_message_types.xml  test_output.xml  test_serialization_ints.xml  test_serialization_results.xml  test_tp_results.xml
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml  docs-plantuml.yml  pre-commit.yml  publish-requirements.yml  release.yml  requirements-validation.yml
docs/: E2E_IMPLEMENTATION_REVIEW.md  README.md  SOMEIP_ACCEPTANCE_TEST_PLAN.md  TEST_PLAN_STATUS.md
docs/architecture/: e2e_protection.md
docs/diagrams/: deployment_architecture.puml  v_model_test_strategy.puml
docs/requirements/: README.md  TRACEABILITY_GUIDE.md  conf.py  index.rst  requirements.txt  spec_references.rst
docs/requirements/_static/: custom.css
docs/requirements/implementation/: architecture.rst  e2e_plugin.rst  message_header.rst  serialization.rst  service_discovery.rst  transport.rst  transport_protocol.rst
examples/: CMakeLists.txt
examples/advanced/multi_service/: client.cpp  server.cpp
examples/advanced/udp_config/: CMakeLists.txt  README.md  udp_config_example.cpp
examples/basic/events/: publisher.cpp  subscriber.cpp
examples/basic/hello_world/: client.cpp  server.cpp
examples/cross_platform_demo/: Dockerfile.linux  README.md  run_linux_server.sh  run_mac_client.sh  stop_linux_server.sh
examples/e2e_protection/: CMakeLists.txt  README.md  basic_e2e.cpp  plugin_integration.cpp  safety_critical.cpp
examples/infra_test/: README.md  multicast_listener.py  multicast_sender.py
examples/protocol_checker/: Dockerfile.raw  README.md  raw_someip_client.c  raw_someip_server.c
include/e2e/: README.md  e2e_config.h  e2e_crc.h  e2e_header.h  e2e_profile.h  e2e_profile_registry.h  e2e_protection.h
include/e2e/e2e_profiles/: standard_profile.h
include/events/: event_types.h
include/sd/: sd_message.h  sd_types.h
include/serialization/: serializer.h
include/someip/: message.h
include/tp/: README.md  tp_manager.h  tp_reassembler.h  tp_segmenter.h  tp_types.h
include/transport/: udp_transport.h
scripts/: README.md  bump_submodule.sh  bump_version.sh  check_spec_requirements.py  extract_code_requirements.py  generate_implementation_report.py  generate_requirement_diff.py  generate_traceability_matrix.py  install_dev_tools.sh  run_clang_tidy.sh  test_in_docker.sh  validate_requirements.py  verify_implementation_status.py
src/: CMakeLists.txt
src/common/: result.cpp
src/core/: session_manager.cpp
src/e2e/: e2e_crc.cpp  e2e_header.cpp  e2e_profile_registry.cpp  e2e_protection.cpp
src/e2e/e2e_profiles/: standard_profile.cpp
src/events/: event_publisher.cpp  event_subscriber.cpp
src/rpc/: rpc_client.cpp  rpc_server.cpp
src/sd/: sd_client.cpp  sd_message.cpp  sd_server.cpp
src/serialization/: serializer.cpp
src/someip/: message.cpp  types.cpp
src/tp/: tp_manager.cpp  tp_reassembler.cpp  tp_segmenter.cpp
src/transport/: endpoint.cpp  tcp_transport.cpp  udp_transport.cpp
tests/: CMakeLists.txt  README.md  test_e2e.cpp  test_endpoint.cpp  test_events.cpp  test_message.cpp  test_rpc.cpp  test_sd.cpp  test_serialization.cpp  test_session_manager.cpp  test_tcp_transport.cpp  test_tp.cpp  test_udp_transport.cpp
tests/integration/: test_e2e_integration.py  test_echo_integration.py
tests/system/: test_e2e_system.py  test_full_stack_integration.py  test_someip_system.cpp
